--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.2.5
-  geolocator: ^9.0.2
+  geolocator: ^7.7.0
   http: ^0.13.5
   permission_handler: ^10.2.0
+  flutter_compass: ^0.7.0
+assets:
+  - assets/images/
+
 
 dev_dependencies:
   flutter_test:
