飲食店のピンを表示 検索範囲のボタンを有効化

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,8 @@ dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/arrow.png
-    - assets/map_style.json
-    - assets/restaurant_pin.png
-
+  - assets/map_style.json
+  - assets/images/restaurant_pin.png
 dev_dependencies:
   flutter_test:
     sdk: flutter
